upgrading code and adding files for reprodutibility

--- a/Curva_de_Phillips_BR.ipynb
+++ b/Curva_de_Phillips_BR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -131,121 +131,6 @@
        "      <td>17185.64</td>\n",
        "      <td>2.148584</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1999</th>\n",
-       "      <td>17968.36</td>\n",
-       "      <td>2.246441</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2000</th>\n",
-       "      <td>19271.51</td>\n",
-       "      <td>2.409363</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001</th>\n",
-       "      <td>20582.83</td>\n",
-       "      <td>2.573307</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2002</th>\n",
-       "      <td>22253.78</td>\n",
-       "      <td>2.782213</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2003</th>\n",
-       "      <td>25583.29</td>\n",
-       "      <td>3.198475</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2004</th>\n",
-       "      <td>27276.69</td>\n",
-       "      <td>3.410187</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2005</th>\n",
-       "      <td>29172.10</td>\n",
-       "      <td>3.647155</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2006</th>\n",
-       "      <td>30398.95</td>\n",
-       "      <td>3.800539</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2007</th>\n",
-       "      <td>31479.40</td>\n",
-       "      <td>3.935619</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2008</th>\n",
-       "      <td>33253.20</td>\n",
-       "      <td>4.157383</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2009</th>\n",
-       "      <td>34868.67</td>\n",
-       "      <td>4.359352</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010</th>\n",
-       "      <td>36601.22</td>\n",
-       "      <td>4.575959</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2011</th>\n",
-       "      <td>39020.99</td>\n",
-       "      <td>4.878484</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012</th>\n",
-       "      <td>41173.13</td>\n",
-       "      <td>5.147549</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013</th>\n",
-       "      <td>43716.00</td>\n",
-       "      <td>5.465463</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2014</th>\n",
-       "      <td>46457.52</td>\n",
-       "      <td>5.808214</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015</th>\n",
-       "      <td>50583.44</td>\n",
-       "      <td>6.324045</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016</th>\n",
-       "      <td>55147.36</td>\n",
-       "      <td>6.894635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017</th>\n",
-       "      <td>57152.61</td>\n",
-       "      <td>7.145336</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018</th>\n",
-       "      <td>59237.90</td>\n",
-       "      <td>7.406043</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019</th>\n",
-       "      <td>61415.44</td>\n",
-       "      <td>7.678283</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020</th>\n",
-       "      <td>63362.26</td>\n",
-       "      <td>7.921679</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021</th>\n",
-       "      <td>27697.49</td>\n",
-       "      <td>3.462797</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -257,39 +142,16 @@
        "1995  13353.08    1.669429\n",
        "1996  15529.67    1.941551\n",
        "1997  16619.46    2.077799\n",
-       "1998  17185.64    2.148584\n",
-       "1999  17968.36    2.246441\n",
-       "2000  19271.51    2.409363\n",
-       "2001  20582.83    2.573307\n",
-       "2002  22253.78    2.782213\n",
-       "2003  25583.29    3.198475\n",
-       "2004  27276.69    3.410187\n",
-       "2005  29172.10    3.647155\n",
-       "2006  30398.95    3.800539\n",
-       "2007  31479.40    3.935619\n",
-       "2008  33253.20    4.157383\n",
-       "2009  34868.67    4.359352\n",
-       "2010  36601.22    4.575959\n",
-       "2011  39020.99    4.878484\n",
-       "2012  41173.13    5.147549\n",
-       "2013  43716.00    5.465463\n",
-       "2014  46457.52    5.808214\n",
-       "2015  50583.44    6.324045\n",
-       "2016  55147.36    6.894635\n",
-       "2017  57152.61    7.145336\n",
-       "2018  59237.90    7.406043\n",
-       "2019  61415.44    7.678283\n",
-       "2020  63362.26    7.921679\n",
-       "2021  27697.49    3.462797"
+       "1998  17185.64    2.148584"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ipca_ano"
+    "ipca_ano.head()"
    ]
   },
   {
@@ -303,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,11 +174,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pnad=pnad.rename(columns={'vd4001':'forca_trabalho','vd4002':'ocupacao','vd4009':'condicao_na_ocupacao'})"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pnad=pnad.rename(columns={'vd4001':'forca_trabalho','vd4002':'ocupacao',\t'vd4009':'condicao_na_ocupacao'})"
+    "def selecao(ano):\n",
+    "    return pnad[pnad['ano']==ano]\n",
+    "def forcat(ano):\n",
+    "    return ano[ano['forca_trabalho']==1]\n",
+    "def desem(ano):\n",
+    "    return ano[ano['ocupacao']==2]"
    ]
   },
   {
@@ -325,26 +201,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def selecao(ano):\n",
-    "    return pnad[pnad['ano']==ano]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#carregando a seleção ano a ano\n",
-    "p_2012=selecao(2012)\n",
-    "p_2013=selecao(2013)\n",
-    "p_2014=selecao(2014)\n",
-    "p_2015=selecao(2015)\n",
-    "p_2016=selecao(2016)\n",
-    "p_2017=selecao(2017)\n",
-    "p_2018=selecao(2018)\n",
-    "p_2019=selecao(2019)\n",
-    "p_2020=selecao(2020)"
+    "forca_de_trabalho=[]\n",
+    "desempregados=[]\n",
+    "ano=[]\n",
+    "for i in range(2012,2020+1):\n",
+    "    df_ano_selecionado=selecao(i)\n",
+    "    forca_de_trabalho.append(len(forcat(df_ano_selecionado)))\n",
+    "    desempregados.append(len(desem(df_ano_selecionado)))\n",
+    "    ano.append(i)"
    ]
   },
   {
@@ -356,60 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def forcat(ano):\n",
-    "    return ano[ano['forca_trabalho']==1]\n",
-    "def desem(ano):\n",
-    "    return ano[ano['ocupacao']==2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "forca_de_trabalho=[]\n",
-    "desempregados=[]\n",
-    "ano=[]\n",
-    "i=2012\n",
-    "while i <2021:\n",
-    "    ano.append(i)\n",
-    "    i+=1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "forca_de_trabalho.append(len(forcat(p_2012)))\n",
-    "forca_de_trabalho.append(len(forcat(p_2013)))\n",
-    "forca_de_trabalho.append(len(forcat(p_2014)))\n",
-    "forca_de_trabalho.append(len(forcat(p_2015)))\n",
-    "forca_de_trabalho.append(len(forcat(p_2016)))\n",
-    "forca_de_trabalho.append(len(forcat(p_2017)))\n",
-    "forca_de_trabalho.append(len(forcat(p_2018)))\n",
-    "forca_de_trabalho.append(len(forcat(p_2019)))\n",
-    "forca_de_trabalho.append(len(forcat(p_2020)))\n",
-    "desempregados.append(len(desem(p_2012)))\n",
-    "desempregados.append(len(desem(p_2013)))\n",
-    "desempregados.append(len(desem(p_2014)))\n",
-    "desempregados.append(len(desem(p_2015)))\n",
-    "desempregados.append(len(desem(p_2016)))\n",
-    "desempregados.append(len(desem(p_2017)))\n",
-    "desempregados.append(len(desem(p_2018)))\n",
-    "desempregados.append(len(desem(p_2019)))\n",
-    "desempregados.append(len(desem(p_2020)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
@@ -508,42 +319,6 @@
        "      <td>55147.36</td>\n",
        "      <td>6.894635</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>266798</td>\n",
-       "      <td>29576</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>11.085540</td>\n",
-       "      <td>57152.61</td>\n",
-       "      <td>7.145336</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>263739</td>\n",
-       "      <td>28967</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>10.983207</td>\n",
-       "      <td>59237.90</td>\n",
-       "      <td>7.406043</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>258319</td>\n",
-       "      <td>27034</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>10.465355</td>\n",
-       "      <td>61415.44</td>\n",
-       "      <td>7.678283</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>150920</td>\n",
-       "      <td>19504</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>12.923403</td>\n",
-       "      <td>63362.26</td>\n",
-       "      <td>7.921679</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -555,35 +330,27 @@
        "2             270382                16260  2014     6.013714  46457.52   \n",
        "3             266631                21727  2015     8.148715  50583.44   \n",
        "4             268766                30555  2016    11.368625  55147.36   \n",
-       "5             266798                29576  2017    11.085540  57152.61   \n",
-       "6             263739                28967  2018    10.983207  59237.90   \n",
-       "7             258319                27034  2019    10.465355  61415.44   \n",
-       "8             150920                19504  2020    12.923403  63362.26   \n",
        "\n",
        "   normalized  \n",
        "0    5.147549  \n",
        "1    5.465463  \n",
        "2    5.808214  \n",
        "3    6.324045  \n",
-       "4    6.894635  \n",
-       "5    7.145336  \n",
-       "6    7.406043  \n",
-       "7    7.678283  \n",
-       "8    7.921679  "
+       "4    6.894635  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "agregado"
+    "agregado.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 24,
    "metadata": {
     "tags": []
    },
@@ -634,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -664,44 +431,21 @@
        " 0.6694292369030042,\n",
        " 0.16300284278982846,\n",
        " 0.07017470429184898,\n",
-       " 0.03406729219842288,\n",
-       " 0.04554500152452858,\n",
-       " 0.07252470453619576,\n",
-       " 0.06804448639468338,\n",
-       " 0.08118174225798869,\n",
-       " 0.14961548105535327,\n",
-       " 0.06619164306076347,\n",
-       " 0.06948827002103257,\n",
-       " 0.04205559421502043,\n",
-       " 0.03554234603497841,\n",
-       " 0.05634796088870825,\n",
-       " 0.04858088845584776,\n",
-       " 0.04968787166244054,\n",
-       " 0.06611173070187312,\n",
-       " 0.05515339308408118,\n",
-       " 0.06176042482075061,\n",
-       " 0.0627120505078232,\n",
-       " 0.08881059514153981,\n",
-       " 0.09022557580109254,\n",
-       " 0.03636166808347671,\n",
-       " 0.03648634769260752,\n",
-       " 0.03675923690745278,\n",
-       " 0.03169919486044539,\n",
-       " -0.5628708635077093]"
+       " 0.03406729219842288]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "variacao"
+    "variacao[:5] #apenas mostrando algumas linhas da lista"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 28,
    "metadata": {
     "tags": []
    },
@@ -712,18 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "ipca_ano=ipca_ano.drop(columns='var')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -816,46 +549,6 @@
        "      <td>6.894635</td>\n",
        "      <td>0.090226</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>266798</td>\n",
-       "      <td>29576</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>11.085540</td>\n",
-       "      <td>57152.61</td>\n",
-       "      <td>7.145336</td>\n",
-       "      <td>0.036362</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>263739</td>\n",
-       "      <td>28967</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>10.983207</td>\n",
-       "      <td>59237.90</td>\n",
-       "      <td>7.406043</td>\n",
-       "      <td>0.036486</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>258319</td>\n",
-       "      <td>27034</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>10.465355</td>\n",
-       "      <td>61415.44</td>\n",
-       "      <td>7.678283</td>\n",
-       "      <td>0.036759</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>150920</td>\n",
-       "      <td>19504</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>12.923403</td>\n",
-       "      <td>63362.26</td>\n",
-       "      <td>7.921679</td>\n",
-       "      <td>0.031699</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -867,35 +560,27 @@
        "2             270382                16260  2014     6.013714  46457.52   \n",
        "3             266631                21727  2015     8.148715  50583.44   \n",
        "4             268766                30555  2016    11.368625  55147.36   \n",
-       "5             266798                29576  2017    11.085540  57152.61   \n",
-       "6             263739                28967  2018    10.983207  59237.90   \n",
-       "7             258319                27034  2019    10.465355  61415.44   \n",
-       "8             150920                19504  2020    12.923403  63362.26   \n",
        "\n",
        "   normalized      var%  \n",
        "0    5.147549  0.055153  \n",
        "1    5.465463  0.061760  \n",
        "2    5.808214  0.062712  \n",
        "3    6.324045  0.088811  \n",
-       "4    6.894635  0.090226  \n",
-       "5    7.145336  0.036362  \n",
-       "6    7.406043  0.036486  \n",
-       "7    7.678283  0.036759  \n",
-       "8    7.921679  0.031699  "
+       "4    6.894635  0.090226  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "agregad2"
+    "agregad2.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -924,6 +609,13 @@
     "plt.plot(agregad2['taxa_desemp'],p(agregad2['taxa_desemp']),\"r--\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
